force-app/main/default/objects/FieloEE__FrontEndSessionData__c/fields/FieloEE__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ExpirationDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>