force-app/main/default/objects/FieloEE__FrontEndSessionData__c/fields/FieloEE__MemberId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__MemberId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>