force-app/main/default/objects/FieloEE__FrontEndSessionData__c/fields/FieloEE__NonStaticSessionId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__NonStaticSessionId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Non Static Session Id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>